Refactored API. Created Players end points
