# api/src/main/java/com/mauriciotogneri/momowars/validation/endpoints/players/JoinGameEndPoint.java
@@ -1,19 +1,17 @@
-package com.mauriciotogneri.momowars.validation.endpoints.games;
+package com.mauriciotogneri.momowars.validation.endpoints.players;
 
 import com.mauriciotogneri.apivalidator.api.ApiRequest;
 import com.mauriciotogneri.apivalidator.api.ApiResult;
 import com.mauriciotogneri.apivalidator.parameters.path.PathParameters;
-import com.mauriciotogneri.momowars.api.games.EndTurn;
+import com.mauriciotogneri.momowars.api.players.JoinGame;
 import com.mauriciotogneri.momowars.validation.BaseEndPoint;
 import com.mauriciotogneri.momowars.validation.EndPointDefinition;
 
-import okhttp3.RequestBody;
-
-public class EndTurnEndPoint extends BaseEndPoint implements EndTurn
+public class JoinGameEndPoint extends BaseEndPoint implements JoinGame
 {
-    public EndTurnEndPoint()
+    public JoinGameEndPoint()
     {
-        super(new EndPointDefinition(EndTurn.class));
+        super(new EndPointDefinition(JoinGame.class));
     }
 
     public ApiResult execute(String sessionToken, String gameId) throws Exception
@@ -23,7 +21,6 @@ public class EndTurnEndPoint extends BaseEndPoint implements EndTurn
 
         ApiRequest.Builder builder = request();
         builder.header(HEADER_SESSION_TOKEN, sessionToken);
-        builder.body(RequestBody.create(null, new byte[0]));
         builder.path(new PathParameters(path), PATH_FORMAT);
         builder.response(jsonResponse());
 
