# api/src/main/java/com/mauriciotogneri/momowars/validation/endpoints/players/LeaveGameEndPoint.java
@@ -1,9 +1,9 @@
-package com.mauriciotogneri.momowars.validation.endpoints.games;
+package com.mauriciotogneri.momowars.validation.endpoints.players;
 
 import com.mauriciotogneri.apivalidator.api.ApiRequest;
 import com.mauriciotogneri.apivalidator.api.ApiResult;
 import com.mauriciotogneri.apivalidator.parameters.path.PathParameters;
-import com.mauriciotogneri.momowars.api.games.LeaveGame;
+import com.mauriciotogneri.momowars.api.players.LeaveGame;
 import com.mauriciotogneri.momowars.validation.BaseEndPoint;
 import com.mauriciotogneri.momowars.validation.EndPointDefinition;
 
@@ -14,10 +14,11 @@ public class LeaveGameEndPoint extends BaseEndPoint implements LeaveGame
         super(new EndPointDefinition(LeaveGame.class));
     }
 
-    public ApiResult execute(String sessionToken, String gameId) throws Exception
+    public ApiResult execute(String sessionToken, String gameId, String playerId) throws Exception
     {
         PathParameter path = new PathParameter();
         path.gameId = gameId;
+        path.playerId = playerId;
 
         ApiRequest.Builder builder = request();
         builder.header(HEADER_SESSION_TOKEN, sessionToken);
